Better 'and' parsing (476)