@@ -23,20 +23,26 @@ public class AndParsingTest extends OclParsingTestCase {
 
     @Test
     public void test_let_chaining_in_function() {
-        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("let fn x = let ax = Instance.to_array x and ay = Instance.to_array y"), RPsiLet.class);
+        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("""
+                let fn x =
+                  let ax = Instance.to_array x
+                  and ay = Instance.to_array y in ()
+                """), RPsiLet.class);
 
         assertSize(1, lets);
-        assertEquals("fn", lets.get(0).getName());
+        assertEquals("fn", lets.getFirst().getName());
     }
 
     @Test
     public void test_module_chaining() {
-        PsiFile file = parseCode("module rec X : sig end = struct end and Y : sig end = struct end");
-        List<RPsiModule> mods = new ArrayList<>(moduleExpressions(file));
+        List<RPsiInnerModule> es = childrenOfType(parseCode("""
+                module rec X : sig end = struct end
+                and Y : sig end = struct end
+                """), RPsiInnerModule.class);
 
-        assertSize(2, mods);
-        assertEquals("X", mods.get(0).getName());
-        assertEquals("Y", mods.get(1).getName());
+        assertSize(2, es);
+        assertEquals("X", es.get(0).getName());
+        assertEquals("Y", es.get(1).getName());
     }
 
     @Test
@@ -51,30 +57,55 @@ public class AndParsingTest extends OclParsingTestCase {
 
     @Test
     public void test_pattern_chaining() {
-        PsiFile file = parseCode("match optsign with | Some sign -> let mtb1 = 1 and mtb2 = 2");
+        PsiFile file = parseCode("""
+                match optSign with
+                | Some sign ->
+                    let mtb1 = 1
+                    and mtb2 = 2
+                """);
         Collection<PsiNamedElement> exps = expressions(file);
 
         assertInstanceOf(file.getFirstChild(), RPsiSwitch.class);
         assertEquals(0, exps.size());
         RPsiPatternMatchBody body = PsiTreeUtil.findChildOfType(file, RPsiPatternMatchBody.class);
-        assertEquals("let mtb1 = 1 and mtb2 = 2", body.getText());
+        assertEquals("let mtb1 = 1\n    and mtb2 = 2", body.getText());
         Collection<RPsiLet> lets = PsiTreeUtil.findChildrenOfType(body, RPsiLet.class);
         assertSize(2, lets);
     }
 
     @Test
     public void test_type_chaining() {
-        Collection<RPsiType> types = typeExpressions(parseCode("type update = | NoUpdate and 'state self = {state: 'state;}"));
+        Collection<RPsiType> types = typeExpressions(parseCode("""
+                type update = | NoUpdate
+                and 'state self = {state: 'state;}
+                """));
 
         assertSize(2, types);
         assertEquals("update", first(types).getName());
         assertEquals("self", second(types).getName());
     }
 
+
+    @Test
+    public void test_type_chaining_lIdent() {
+        List<RPsiType> types = childrenOfType(parseCode("""
+                type t = y
+                (* test *)
+                and y = string
+                """), RPsiType.class);
+
+        assertEquals(2, types.size());
+        assertEquals("t", first(types).getName());
+        assertEquals("y", second(types).getName());
+    }
+
     // https://github.com/giraud/reasonml-idea-plugin/issues/135
     @Test
     public void test_GH_135() {
-        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("let f1 = function | _ -> ()\nand missing = ()"), RPsiLet.class);
+        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("""
+                let f1 = function | _ -> ()
+                and missing = ()
+                """), RPsiLet.class);
 
         assertSize(2, lets);
         assertEquals("f1", lets.get(0).getName());
@@ -84,7 +115,11 @@ public class AndParsingTest extends OclParsingTestCase {
     // https://github.com/giraud/reasonml-idea-plugin/issues/175
     @Test
     public void test_GH_175() {
-        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("let f1 = let f11 = function | _ -> \"\" in ()\n and f2 = let f21 = function | _ -> \"\" in ()\n and f3 = ()\n"), RPsiLet.class);
+        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("""
+                let f1 = let f11 = function | _ -> "" in ()
+                and f2 = let f21 = function | _ -> "" in ()
+                and f3 = ()
+                """), RPsiLet.class);
 
         assertSize(3, lets);
         assertEquals("f1", lets.get(0).getName());
@@ -95,7 +130,12 @@ public class AndParsingTest extends OclParsingTestCase {
     // https://github.com/giraud/reasonml-idea-plugin/issues/271
     @Test
     public void test_GH_271() {
-        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("let parser_of_token_list a = \nlet loop x = () in \n() \nand parser_of_symbol b = ()"), RPsiLet.class);
+        List<RPsiLet> lets = ORUtil.findImmediateChildrenOfClass(parseCode("""
+                let parser_of_token_list a =
+                    let loop x = () in
+                    ()
+                and parser_of_symbol b = ()
+                """), RPsiLet.class);
 
         assertSize(2, lets);
         assertEquals("parser_of_token_list", lets.get(0).getName());
@@ -105,7 +145,10 @@ public class AndParsingTest extends OclParsingTestCase {
     // https://github.com/giraud/reasonml-idea-plugin/issues/272
     @Test
     public void test_GH_272() {
-        FileBase file = parseCode("let x = match xx with | Y -> let fn y = 1 in () and z = 1 ");
+        FileBase file = parseCode("""
+                let x = match xx with | Y -> let fn y = 1 in ()
+                and z = 1
+                """);
         List<RPsiLet> exps = ORUtil.findImmediateChildrenOfClass(file, RPsiLet.class);
 
         assertEquals(2, exps.size());
